[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Scenes/Pause/Pause.gd" type="Script" id=1]
[ext_resource path="res://UI/GUI/Button/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Fonts/yoster.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Shader/Blur.gdshader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/blur_amount = 2.0

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 96
font_data = ExtResource( 3 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Dim" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.294118 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 512, 300 )

[node name="Continue" parent="Content" instance=ExtResource( 2 )]
margin_left = -160.0
margin_top = -216.0
margin_right = 160.0
margin_bottom = -152.0
custom_fonts/font = SubResource( 3 )
text = "Continue"

[node name="Menu" parent="Content" instance=ExtResource( 2 )]
margin_left = -192.0
margin_top = -120.0
margin_right = 192.0
margin_bottom = -56.0
focus_mode = 2
custom_fonts/font = SubResource( 3 )
text = "Back to Menu"

[node name="Pause" type="Label" parent="Content"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.0
margin_top = 48.0
margin_right = 184.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 4 )
text = "Paused"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[connection signal="button_down" from="Content/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="Content/Menu" to="." method="_on_Menu_button_down"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
